<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.onemfive</groupId>
        <artifactId>parent</artifactId>
        <version>0.6.3-SNAPSHOT</version>
    </parent>

	<artifactId>router</artifactId>

	<packaging>jar</packaging>

	<name>1m5-router</name>
	<url>https://1m5.io</url>
	<description>Invisible Matrix Services - Router</description>
	<inceptionYear>2017</inceptionYear>
	<licenses>
		<license>
			<name>Unlicense</name>
			<url>https://unlicense.org/</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>objectorange</name>
			<email>brian@resolvingarchitecture.io</email>
		</developer>
	</developers>
	<scm>
		<connection>scm:git@github.com/1m5/1m5</connection>
		<developerConnection>scm:git@github.com/1m5/1m5</developerConnection>
		<url>git@github.com/1m5/1m5</url>
	</scm>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
        <dependency>
            <groupId>io.onemfive</groupId>
            <artifactId>common</artifactId>
            <version>${project.version}</version>
        </dependency>
		<!-- Crypto -->
		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcpg-jdk15on -->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpg-jdk15on</artifactId>
			<version>1.60</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk15on</artifactId>
			<version>1.60</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-ext-jdk15on</artifactId>
			<version>1.60</version>
		</dependency>
		<!-- Clearnet -->
		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			<version>3.10.0</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>9.4.17.v20190418</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty.websocket</groupId>
			<artifactId>javax-websocket-server-impl</artifactId>
			<version>9.4.15.v20190215</version>
		</dependency>
		<!-- I2P -->
		<dependency>
			<groupId>net.i2p</groupId>
			<artifactId>i2p</artifactId>
			<version>0.9.44</version>
		</dependency>
		<dependency>
			<groupId>net.i2p</groupId>
			<artifactId>router</artifactId>
			<version>0.9.44</version>
		</dependency>
		<dependency>
			<groupId>net.i2p.client</groupId>
			<artifactId>streaming</artifactId>
			<version>0.9.44</version>
		</dependency>
		<dependency>
			<groupId>net.i2p.client</groupId>
			<artifactId>mstreaming</artifactId>
			<version>0.9.44</version>
		</dependency>
		<!-- Neo4j -->
		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j</artifactId>
			<version>3.5.5</version>
		</dependency>
		<dependency>
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j-cypher</artifactId>
			<version>3.5.5</version>
		</dependency>
		<!-- Radio - Bluetooth -->
		<dependency>
			<groupId>net.sf.bluecove</groupId>
			<artifactId>bluecove</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>net.sf.bluecove</groupId>
			<artifactId>bluecove-gpl</artifactId>
			<version>2.1.0</version>
		</dependency>
		<!-- Radio - GNU Radio -->

		<!-- Monero -->
		<dependency>
			<groupId>io.github.monero-ecosystem</groupId>
			<artifactId>monero-java</artifactId>
			<version>0.2.1</version>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<finalName>${project.name}-${project.version}</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
                    <include>**/*.json</include>
					<include>**/*.xml</include>
					<include>**/*.yml</include>
					<include>**/*.properties</include>
					<include>**/*.config</include>
					<include>**/*.txt</include>
					<include>**/*.crt</include>
					<include>**/*.png</include>
					<include>**/*.fxml</include>
					<include>**/*.css</include>
					<include>**/*.ttf</include>
					<include>**/*.otf</include>
				</includes>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<!--<plugin>-->
					<!--<groupId>org.apache.maven.plugins</groupId>-->
					<!--<artifactId>maven-project-info-reports-plugin</artifactId>-->
					<!--<version>2.8.1</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<groupId>org.apache.maven.plugins</groupId>-->
					<!--<artifactId>maven-assembly-plugin</artifactId>-->
					<!--<version>2.5.5</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<artifactId>maven-antrun-plugin</artifactId>-->
					<!--<version>1.8</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<artifactId>maven-dependency-plugin</artifactId>-->
					<!--<version>2.10</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<artifactId>maven-release-plugin</artifactId>-->
					<!--<version>2.5.2</version>-->
				<!--</plugin>-->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
                    <configuration>
                        <release>11</release>
                    </configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
<!--            <plugin>-->
<!--                <groupId>org.openjfx</groupId>-->
<!--                <artifactId>javafx-maven-plugin</artifactId>-->
<!--                <version>0.0.4</version>-->
<!--                <configuration>-->
<!--                    <mainClass>io.onemfive.Router</mainClass>-->
<!--                </configuration>-->
<!--            </plugin>-->
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<mainClass>io.onemfive.Router</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
<!--			<plugin>-->
<!--				<groupId>org.apache.maven.plugins</groupId>-->
<!--				<artifactId>maven-project-info-reports-plugin</artifactId>-->
<!--			</plugin>-->
		</plugins>
	</build>

	<!--<reporting>-->
		<!--<plugins>-->
			<!--<plugin>-->
				<!--<groupId>org.apache.maven.plugins</groupId>-->
				<!--<artifactId>maven-project-info-reports-plugin</artifactId>-->
				<!--<version>2.8.1</version>-->
				<!--<reportSets>-->
					<!--<reportSet>-->
						<!--<reports>-->
							<!--<report>dependencies</report>-->
							<!--<report>project-team</report>-->
							<!--&lt;!&ndash;<report>mailing-list</report> &ndash;&gt;-->
							<!--&lt;!&ndash;<report>cim</report> &ndash;&gt;-->
							<!--&lt;!&ndash;<report>issue-tracking</report> &ndash;&gt;-->
							<!--<report>license</report>-->
							<!--<report>scm</report>-->
						<!--</reports>-->
					<!--</reportSet>-->
				<!--</reportSets>-->
			<!--</plugin>-->
		<!--</plugins>-->
	<!--</reporting>-->

</project>
